--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "node": ">=20.10.0"
   },
   "dependencies": {
-    "express": "*"
-  },
-  "devDependencies": {}
+    "express": "*",
+    "node-fetch": "^2.7.0"
+  }
 }
